--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="../scss/main.css">
+  <link rel="stylesheet" href="scss/main.css">
   <title>About Me</title>
 </head>
 
@@ -58,7 +58,7 @@
       Sedikit Info Mengenai Saya ...
     </h2>
     <div class="about-info">
-      <img src="../dist/img/me.jpeg" alt="John Doe" class="bio-image">
+      <img src="img/me.jpeg" alt="John Doe" class="bio-image">
 
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
