--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
       <div class="job job-1">
         <h3>Web Design</h3>
         <h6>Membuat Tampilan Web Yang Menarik & Responsif</h6>
-        <p>Teknologi yang saya gunakan yaitu (HTML+CSS+JAVASCRIPT) kemudian framework seperti Bootsrtrap & Materialize
-          untuk css, jQuery dan Vue.js untuk Javascipt, CSS Prepocessore seperti SASS dll </p>
+        <p>Teknologi yang saya gunakan yaitu (HTML+CSS+JAVASCRIPT) kemudian framework seperti Bootstrap & Materialize
+          untuk css, jQuery dan Vue.js untuk Javascipt, CSS Preprocessore seperti SASS dll </p>
       </div>
 
       <div class="job job-2">
